--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,45 @@
-flask==2.3.2
-flask-cors==3.0.10
-google-auth==2.22.0
+annotated-types==0.7.0
+blinker==1.9.0
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+colorama==0.4.6
+Flask==2.3.2
+Flask-Cors==3.0.10
+google-ai-generativelanguage==0.4.0
+google-api-core==2.23.0
 google-api-python-client==2.100.0
+google-auth==2.22.0
+google-auth-httplib2==0.2.0
 google-generativeai==0.4.1
-python-dotenv==1.0.0
+googleapis-common-protos==1.66.0
+grpcio==1.68.1
+grpcio-status==1.62.3
+httplib2==0.22.0
+idna==3.10
+itsdangerous==2.2.0
+Jinja2==3.1.4
+joblib==1.4.2
+MarkupSafe==3.0.2
+numpy==2.1.3
+proto-plus==1.25.0
+protobuf==4.25.5
+pyasn1==0.6.1
+pyasn1_modules==0.4.1
+pydantic==2.10.2
+pydantic_core==2.27.1
+pyparsing==3.2.0
 PyPDF2==3.0.1
-scikit-learn==1.3.0
+python-dotenv==1.0.0
+requests==2.32.3
+rsa==4.9
+scikit-learn==1.5.2
+scipy==1.14.1
+six==1.16.0
+threadpoolctl==3.5.0
+tqdm==4.67.1
+typing_extensions==4.12.2
+uritemplate==4.1.1
+urllib3==1.26.20
+Werkzeug==3.1.3
